--- a/mapa_alumnos.html
+++ b/mapa_alumnos.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Mi primer mapa</title>
-  <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+  <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/popup.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Añadimos la API de OL-->
-    <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
+    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js" type="text/javascript"></script>
     <!-- Añadimos el código de nuestra aplicación -->
     <script type="text/javascript" src="js/datos.js"></script>
     <script type="text/javascript" src="js/mapa_alumnos.js"></script>
